--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "phosphor-react-native": "^2.3.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0"
