feat: Enhance DashboardScreen with Mood Tracking and Insights
- Added mood tracking functionality using react-native-gifted-charts.
- Integrated mood chart data for weekly mood visualization.
- Implemented mood selector with interactive options.
- Introduced wellness insights cards with gradient backgrounds.
- Updated styles for improved UI consistency and responsiveness.
- Refactored existing components for better organization and readability.
- Added bottom navigation for improved user experience.

--- a/app.json
+++ b/app.json
@@ -7,11 +7,6 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "ios": {
       "supportsTablet": true
     },
@@ -26,7 +21,20 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/splash-icon.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#ffffff",
+          "imageWidth": 200,
+          "dark": {
+            "image": "./assets/splash-icon-dark.png",
+            "backgroundColor": "#000000"
+          }
+        }
+      ]
     ]
   }
 }
