--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "expo": "~53.0.9",
     "expo-font": "~13.3.1",
     "expo-linear-gradient": "~14.1.4",
+    "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "phosphor-react-native": "^2.3.1",
     "react": "19.0.0",
     "react-native": "0.79.2",
+    "react-native-gifted-charts": "^1.4.61",
     "react-native-haptic-feedback": "^2.3.3",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.12.0"
